# MatchaTTS-Implementation-Analysis

./: .gitignore  1_notebook_run_model.ipynb  ReadMe.md  Unet.py  decoder.py  environment.yml  pyproject.toml  synthesis.ipynb
implementation/: Unet.py  benchmark_ddp.py  config.py  data.py  decoder.py  decoderZ.py  encoder.py  flow_matching.py  matcha_transformer.py  matchatts.py  prepare_files.py  prepare_ljspeech_filelists.py  text.py  train.py  train_ddp.py  utils.py
implementation/monotonic_align/: __init__.py  core.pyx  setup.py
implementation/not_used/: decoder.py
implementation/srcZ/: Unet.py  activation_function.py  lora.py
implementation/transformer/: AttentionBlock.py  activation_function.py
implementations/: decoder.py  decoder_skeleton.py  encoder.py  encoder_skeleton.py  prepare_ljspeech_filelists.py  text_utils.py  train.py  train_skeleton.py
inference/: 1_notebook_inference.ipynb  1_notebook_run_model.ipynb  generate_survey_samples.py  inference_comparaison.ipynb
src/: cross_attention.py  decoder.py  self_attention.py
src/transformer/: activation_function.py
src/transfromer/: Attention.py  activation_function.py  transformer.py
survey/: google_script.js  index.html
survey/audio_samples/: metadata.json
